[package]
name = "google_bigquery"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11.13", features = ["default", "json"] }
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive", "default"] }
serde_json = "1.0"
google-bigquery2 = "4.0.1"
google_bigquery_derive = { path = "./google_bigquery_derive" }
chrono = "0.4.23"
async-trait = "0.1.65"
